--- a/Backend/demo/src/main/resources/application.properties
+++ b/Backend/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 
 #  === MyBatis ===
-mybatis.type-aliases-package=com.example.demo.domain
+mybatis.type-aliases-package=com.example.demo
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.com.example.demo.repository=trace
 
