--- a/Front-sun/package.json
+++ b/Front-sun/package.json
@@ -13,14 +13,21 @@
     "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/google-calendar": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
+    "@mui/material": "^5.15.21",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.48.0",
     "css-loader": "^7.1.2",
+    "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "gapi-script": "^1.2.0",
     "googleapis": "^140.0.0",
+    "http-server": "^14.1.1",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.24.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0"
