login and singup

--- a/Backend/demo/src/main/resources/application.properties
+++ b/Backend/demo/src/main/resources/application.properties
@@ -7,9 +7,9 @@ logging.level.com.example.demo.repository=trace
 
 #  === MySQL ===
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mypjt?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=mysql123!
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=Asia/Seoul
+spring.datasource.username=jingi
+spring.datasource.password=1234
 
 #  === JPA ===
 #spring.jpa.properties.hibernate.show_sql=true
