--- a/Backend/demo/src/main/resources/application.properties
+++ b/Backend/demo/src/main/resources/application.properties
@@ -7,14 +7,12 @@ spring.application.name=demo
 
 #  === MySQL ===
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=Asia/Seoul
 spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_web_db?serverTimezone=Asia/Seoul
-#spring.datasource.username=jingi
 spring.datasource.username=root
 spring.datasource.password=1234
 
 #  === JPA ===
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
