--- a/Backend/demo/build.gradle
+++ b/Backend/demo/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+	implementation 'org.springframework.security:spring-security-oauth2-client'
+	implementation 'org.springframework.security:spring-security-oauth2-jose'
 }
 
 tasks.named('test') {
