--- a/Backend/demo/src/main/resources/application.yml
+++ b/Backend/demo/src/main/resources/application.yml
@@ -9,3 +9,4 @@ spring:
             scope:
               - email
               - profile
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
