--- a/Backend/demo/build.gradle
+++ b/Backend/demo/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
