--- a/Backend/demo/src/main/resources/application.properties
+++ b/Backend/demo/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=demo
 
 #  === MySQL ===
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mypjt?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_web_db?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=mysql123!
+spring.datasource.password=1234
 
 #  === JPA ===
 spring.jpa.properties.hibernate.show_sql=true
